Fix typo in warning message. (#446911) Patch from Florian Steinel
2007-06-13  Martin Wehner  <martin.wehner@gmail.com>

	* src/file-manager/fm-desktop-icon-view.c: (net_workarea_changed):
	Fix typo in warning message. (#446911)
	Patch from Florian Steinel  <fsteinel@flonet.net> 

svn path=/trunk/; revision=12924

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 2007-06-13  Martin Wehner  <martin.wehner@gmail.com>
 
+	* src/file-manager/fm-desktop-icon-view.c: (net_workarea_changed):
+	Fix typo in warning message. (#446911)
+	Patch from Florian Steinel  <fsteinel@flonet.net> 
+
+2007-06-13  Martin Wehner  <martin.wehner@gmail.com>
+
 	* src/nautilus-zoom-control.c: (zoom_popup_menu_show):
 	Position the zoom popup menu under the control itself,
 	not where the mouse cursor happens to be. (#446682)
