--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2007-06-13  Jürg Billeter  <j@bitron.ch>
+
+	* nautilus-folder-handler.desktop.in.in:
+	Revert OnlyShowIn=; addition from 2007-05-23 as it breaks opening
+	bookmarks from the panel.
+
 2007-06-13  Martin Wehner  <martin.wehner@gmail.com>
 
 	* src/file-manager/fm-properties-window.c:
