--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,16 @@
+2007-06-17  Martin Wehner  <martin.wehner@gmail.com>
+
+	* libnautilus-private/apps_nautilus_preferences.schemas.in:
+	* libnautilus-private/nautilus-desktop-link.c:
+	(trash_name_changed), (nautilus_desktop_link_new),
+	(trash_state_changed_callback), (nautilus_desktop_link_can_rename),
+	(nautilus_desktop_link_rename), (desktop_link_finalize):
+	* libnautilus-private/nautilus-global-preferences.c:
+	(default_computer_link_name), (default_trash_link_name):
+	* libnautilus-private/nautilus-global-preferences.h:
+	Allow renaming of the network servers desktop icon. (#383182)
+	Patch from Trevor Davenport  <trevor.davenport@gmail.com>
+
 2007-06-13  Jürg Billeter  <j@bitron.ch>
 
 	* nautilus-folder-handler.desktop.in.in:
