--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2007-06-18  Priit Laes  <plaes@svn.gnome.org>
+
+	* et.po: Estonian translation update by Ivar Smolin.
+
 2007-06-13  Pema Geyleg <pema.geyleg@gmail.com>
 
 	* dz.po: Updated dzongkha translation
