Call background page of gnome-appearance-properties for "Change Desktop
2007-06-18  Martin Wehner  <martin.wehner@gmail.com>

	* src/file-manager/fm-desktop-icon-view.c:
	(action_change_background_callback):
	Call background page of gnome-appearance-properties for
	"Change Desktop Background" menu item. (#445195)
	Patch from Denis Washington  <denisw@svn.gnome.org>

svn path=/trunk/; revision=12931

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2007-06-18  Martin Wehner  <martin.wehner@gmail.com>
+
+	* src/file-manager/fm-desktop-icon-view.c:
+	(action_change_background_callback):
+	Call background page of gnome-appearance-properties for
+	"Change Desktop Background" menu item. (#445195)
+	Patch from Denis Washington  <denisw@svn.gnome.org>
+
 2007-06-17  Martin Wehner  <martin.wehner@gmail.com>
 
 	* libnautilus-private/apps_nautilus_preferences.schemas.in:
