Fix whitespace typo in error message. (#424573) Patch from Elizabeth Green
2007-06-18  Martin Wehner  <martin.wehner@gmail.com>

	* src/nautilus-application.c: (nautilus_application_startup):
	Fix whitespace typo in error message. (#424573)
	Patch from Elizabeth Green  <nerdygirl_ellie@yahoo.com>

svn path=/trunk/; revision=12934

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 2007-06-18  Martin Wehner  <martin.wehner@gmail.com>
 
+	* src/nautilus-application.c: (nautilus_application_startup):
+	Fix whitespace typo in error message. (#424573)
+	Patch from Elizabeth Green  <nerdygirl_ellie@yahoo.com>
+
+2007-06-18  Martin Wehner  <martin.wehner@gmail.com>
+
 	* src/nautilus-window-menus.c: (action_about_nautilus_callback):
 	Set program-name instead of deprecated name property
 	and mark the website-label for translation (#438901).
