--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,14 @@
+Major changes in 2.19.4 are:
+* Allow activating the zoom context menu by keyboard
+* Allow renaming of the network servers icons
+* Use new desktop capplet
+* Better handling of unicode search terms
+* Fix program name in about dialog
+* Fix keyboard shortcuts in preferences dialog
+* Fix leak in zoom context menu
+* Fix typos in error and warning messages
+* Fix crash in properties dialog
+
 Major changes in 2.19.3 are:
 * Added support for xdg-user-dirs
 * A11y fix in the file properties dialog
