--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+=== nautilus 2.19.4 ===
+
+2007-06-18  Martin Wehner  <martin.wehner@gmail.com>
+
+	* NEWS:
+	Update for release
+
 2007-06-18  Martin Wehner  <martin.wehner@gmail.com>
 
 	* src/nautilus-application.c: (nautilus_application_startup):
