--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2007-06-19  Martin Wehner  <martin.wehner@gmail.com>
 
+	* Makefile.am:
+	Add all past ChangeLog files to EXTRA_DIST.
+
+2007-06-19  Martin Wehner  <martin.wehner@gmail.com>
+
 	* configure.in:
 	Post release version bump
 
