Don't set extra warning flags in the user environment CFLAGS. Fixes 'make
2007-06-20  Martin Wehner  <martin.wehner@gmail.com>

	* configure.in:
	Don't set extra warning flags in the user environment CFLAGS.
	Fixes 'make distcheck'.

svn path=/trunk/; revision=12941

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2007-06-20  Martin Wehner  <martin.wehner@gmail.com>
+
+	* configure.in:
+	Don't set extra warning flags in the user environment CFLAGS.
+	Fixes 'make distcheck'.
+
 2007-06-19  Martin Wehner  <martin.wehner@gmail.com>
 
 	* Makefile.am:
