--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,10 +1,14 @@
+2007-06-21  Thierry Randrianiriana <thierryR@svn.gnome.org>
+
+	* mg.po: Updated Malagasy translation.
+
 2007-06-19  Daniel Nylander <po@danielnylander.se>
 
 	* sv.po: Updated Swedish translation.
 
 2007-06-19  Jorge Gonzalez <jorgegonz@svn.gnome.org>
 
-        * es.po: Updated Spanish translation 
+        * es.po: Updated Spanish translation
 
 2007-06-18  Jorge Gonzalez <jorgegonz@svn.gnome.org>
 
@@ -69,7 +73,7 @@
 	* sv.po: Updated Swedish translation.
 
 === nautilus 2.19.2 ===
-	
+
 2007-05-12  Alexander Shopov  <ash@contact.bg>
 
 	* bg.po: Updated Bulgarian translation by
@@ -91,7 +95,7 @@
 
 	* sv.po: Updated Swedish translation.
 
-2007-05-2  Djihed Afifi <djihed@gmail.com> 
+2007-05-2  Djihed Afifi <djihed@gmail.com>
 
 	* ar.po: Updated Arabic Translation by Khaled Hosny.
 
@@ -121,7 +125,7 @@
 	Yannig MARCHEGAY (Kokoyaya) <yannig@marchegay>.
 	* LINGUAS: Added "oc".
 
-2007-04-14  Djihed Afifi <djihed@gmail.com> 
+2007-04-14  Djihed Afifi <djihed@gmail.com>
 
 	* ar.po: Updated Arabic Translation by Youssef Chahibi.
 
@@ -196,7 +200,7 @@
 
 	* bn_IN.po: Updated Bengali India Translation.
 
-	
+
 2007-03-11  Gabor Kelemen  <kelemeng@gnome.hu>
 
 	* hu.po: Translation updated.
