Don't set both -Wsign-compare and -Wno-sign-compare. Don't set
2007-06-21  Martin Wehner  <martin.wehner@gmail.com>

	* configure.in:
	Don't set both -Wsign-compare and -Wno-sign-compare.
	Don't set -Wchar-subscripts as it's included in -Wall.

svn path=/trunk/; revision=12944

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2007-06-21  Martin Wehner  <martin.wehner@gmail.com>
+
+	* configure.in:
+	Don't set both -Wsign-compare and -Wno-sign-compare.
+	Don't set -Wchar-subscripts as it's included in -Wall.
+
 2007-06-20  Martin Wehner  <martin.wehner@gmail.com>
 
 	* configure.in:
