--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2007-06-22  I. Felix <ifelix@svn.gnome.org>
+
+	* si.po:  Sinhala Translation updated by Danishka Navin
+	* LINGUAS: Added Sinhala (si) to The List of Languages.
+
 2007-06-21  Thierry Randrianiriana <thierryR@svn.gnome.org>
 
 	* mg.po: Updated Malagasy translation.
