--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2007-06-23  Martin Wehner  <martin.wehner@gmail.com>
+
+	* libnautilus-private/nautilus-file-utilities.c:
+	(update_xdg_dir_cache), (unschedule_user_dirs_changed),
+	(destroy_xdg_dir_cache), (free_xdg_dir_cache):
+	Destroy xdg-user-dirs cache at shutdown.
+
 2007-06-21  Martin Wehner  <martin.wehner@gmail.com>
 
 	* configure.in:
