--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2007-06-23  Josep Puigdemont i Casamajó  <josep.puigdemont@gmail.com>
+
+	* ca.po: Updated Catalan translation.
+
 2007-06-22  I. Felix <ifelix@svn.gnome.org>
 
 	* si.po:  Sinhala Translation updated by Danishka Navin
