Set translation domain for goption context. (#448201) Patch from Gabor
2007-06-23  Martin Wehner  <martin.wehner@gmail.com>

	* src/nautilus-connect-server-dialog-main.c: (main):
        Set translation domain for goption context. (#448201)
	Patch from Gabor Kelemen  <kelemeng@gnome.hu>

svn path=/trunk/; revision=12951

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 2007-06-23  Martin Wehner  <martin.wehner@gmail.com>
 
+	* src/nautilus-connect-server-dialog-main.c: (main):
+        Set translation domain for goption context. (#448201)
+	Patch from Gabor Kelemen  <kelemeng@gnome.hu>
+
+2007-06-23  Martin Wehner  <martin.wehner@gmail.com>
+
 	* libnautilus-private/nautilus-module.c: (nautilus_module_init):
 	Unref extension modules at shutdown. (#346401)
 	Based on patch from Gustavo Carneiro  <gjc@inescporto.pt>
