--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 2007-06-23  Martin Wehner  <martin.wehner@gmail.com>
 
+	* src/nautilus-shell-interface.idl:
+	Fix build with libIDL-0.8.5 and older. (#341173)
+	Patch from Marinus Schraal  <foser@gentoo.org>
+
+2007-06-23  Martin Wehner  <martin.wehner@gmail.com>
+
 	* src/nautilus-connect-server-dialog-main.c: (main):
         Set translation domain for goption context. (#450159)
 	Patch from Gabor Kelemen  <kelemeng@gnome.hu>
