Remove undead file.
2007-06-23  Martin Wehner  <martin.wehner@gmail.com>

	* components/services/nautilus-dependent-shared/
	shared-service-widgets.c:
	Remove undead file.

svn path=/trunk/; revision=12954

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 2007-06-23  Martin Wehner  <martin.wehner@gmail.com>
 
+	* components/services/nautilus-dependent-shared/
+	shared-service-widgets.c:
+	Remove undead file.
+
+2007-06-23  Martin Wehner  <martin.wehner@gmail.com>
+
 	* src/nautilus-shell-interface.idl:
 	Fix build with libIDL-0.8.5 and older. (#341173)
 	Patch from Marinus Schraal  <foser@gentoo.org>
