Make libexif dependency optional again. (#165773)
2007-06-23  Martin Wehner  <martin.wehner@gmail.com>

	* configure.in:
	Make libexif dependency optional again. (#165773)

svn path=/trunk/; revision=12955

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2007-06-23  Martin Wehner  <martin.wehner@gmail.com>
 
+	* configure.in:
+	Make libexif dependency optional again. (#165773)
+
+2007-06-23  Martin Wehner  <martin.wehner@gmail.com>
+
 	* components/services/nautilus-dependent-shared/
 	shared-service-widgets.c:
 	Remove undead file.
