Add optional empty view.
2007-06-24  Christian Neumair  <cneumair@gnome.org>

	* configure.in:
	* src/nautilus-application.c:
	* src/file-manager/Makefile.am:
	* src/file-manager/fm-empty-view.[ch]:
	Add optional empty view.

svn path=/trunk/; revision=12956

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2007-06-24  Christian Neumair  <cneumair@gnome.org>
+
+	* configure.in:
+	* src/nautilus-application.c:
+	* src/file-manager/Makefile.am:
+	* src/file-manager/fm-empty-view.[ch]:
+	Add optional empty view.
+
 2007-06-23  Martin Wehner  <martin.wehner@gmail.com>
 
 	* configure.in:
