Fixed typo (Sitcky -> Sticky) in the Japanese translation, as reported by
2007-06-26  Guilherme de S. Pastore  <gpastore@gnome.org>

       * ja.po: Fixed typo (Sitcky -> Sticky) in the Japanese translation,
         as reported by Kobayashi Noritada on the Debian BTS.

svn path=/trunk/; revision=12957

--- a/po/ja.po
+++ b/po/ja.po
@@ -4070,7 +4070,7 @@ msgstr "グループ ID をセットする(_U)"
 
 #: ../src/file-manager/fm-properties-window.c:3669
 msgid "_Sticky"
-msgstr "Sitcky ビットを立てる(_S)"
+msgstr "Sticky ビットを立てる(_S)"
 
 #: ../src/file-manager/fm-properties-window.c:3749
 #: ../src/file-manager/fm-properties-window.c:3953
