--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2007-06-26  Guilherme de S. Pastore  <gpastore@gnome.org>
+
+	* ja.po: Fixed typo (Sitcky -> Sticky) in the Japanese translation,
+	  as reported by Kobayashi Noritada on the Debian BTS.
+
 2007-06-23  Kjartan Maraas  <kmaraas@gnome.org>
 
 	* nb.po: Updated Norwegian bokmål translation.
