Fixed typo (Sitcky -> Sticky) in the Japanese translation, as reported by
2007-06-26  Guilherme de S. Pastore  <gpastore@gnome.org>

	* ja.po: Fixed typo (Sitcky -> Sticky) in the Japanese translation,
	  as reported by Kobayashi Noritada on the Debian BTS.

svn path=/branches/gnome-2-16/; revision=12958

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2007-06-26  Guilherme de S. Pastore  <gpastore@gnome.org>
+
+	* ja.po: Fixed typo (Sitcky -> Sticky) in the Japanese translation,
+	  as reported by Kobayashi Noritada on the Debian BTS.
+
 2007-04-18  Subhransu Behera  <arya_subhransu@yahoo.co.in>
 
 	* or.po: Updated Oriya Translation.
