--- a/po/ja.po
+++ b/po/ja.po
@@ -4052,7 +4052,7 @@ msgstr "グループ ID をセットする(_U)"
 
 #: ../src/file-manager/fm-properties-window.c:3668
 msgid "_Sticky"
-msgstr "Sitcky ビットを立てる(_S)"
+msgstr "Sticky ビットを立てる(_S)"
 
 #: ../src/file-manager/fm-properties-window.c:3746
 #: ../src/file-manager/fm-properties-window.c:3948
