Fix warning. Patch from Hubert Figuiere.
2007-06-27  Alexander Larsson  <alexl@redhat.com>

        * src/nautilus-file-management-properties-main.c:
	Fix warning. Patch from Hubert Figuiere.


svn path=/trunk/; revision=12959

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2007-06-27  Alexander Larsson  <alexl@redhat.com>
+
+        * src/nautilus-file-management-properties-main.c:
+	Fix warning. Patch from Hubert Figuiere.
+
 2007-06-24  Christian Neumair  <cneumair@gnome.org>
 
 	* configure.in:
