Updated Malagasy translation.
 * po/mg.po: Updated Malagasy translation.

svn path=/trunk/; revision=12960

--- a/po/mg.po
+++ b/po/mg.po
@@ -8,13 +8,13 @@ msgstr ""
 "Project-Id-Version: nautilus HEAD\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2007-06-19 04:10+0100\n"
-"PO-Revision-Date: 2007-06-21 12:26+0300\n"
+"PO-Revision-Date: 2007-06-25 09:37+0300\n"
 "Last-Translator: Thierry Randrianiriana <randrianiriana@gmail.com>\n"
 "Language-Team: MALAGASY <i18n-malagasy-gnome@gna.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms: nplurals=2; plural=n>1;\n"
+"Plural-Forms: nplurals=2; plural=n>1;"
 
 #: ../data/browser.xml.h:1
 msgid "Apparition"
@@ -595,9 +595,7 @@ msgstr ""
 msgid ""
 "If this is set to true, an icon linking to the Network Servers view will be "
 "put on the desktop."
-msgstr ""
-"Raha toa atao hoe marina, dia hasiana kisary mampifandray amin'ny Mpizara "
-"Rezo eo amin'ny sehatr'asa."
+msgstr "Raha toa atao hoe marina, dia hasiana kisary mampifandray amin'ny Mpizara Tambajotra eo amin'ny sehatr'asa."
 
 #: ../libnautilus-private/apps_nautilus_preferences.schemas.in.h:50
 msgid ""
@@ -715,12 +713,11 @@ msgstr "Ny laha-tahiry fandraisan'ny mpampiasa no ataon'ny Nautilus sehatr'asa"
 
 #: ../libnautilus-private/apps_nautilus_preferences.schemas.in.h:66
 msgid "Network Servers icon visible on the desktop"
-msgstr "Hita eo amin'ny sehatr'asa ny kisarin'ny Mpizara Rezo"
+msgstr "Hita eo amin'ny sehatr'asa ny kisarin'ny Mpizara Tambajotra"
 
 #: ../libnautilus-private/apps_nautilus_preferences.schemas.in.h:67
-#, fuzzy
 msgid "Network servers icon name"
-msgstr "Mpizara rezo"
+msgstr "Anaran'ny kisarin'ny mpizara tambajotra."
 
 #: ../libnautilus-private/apps_nautilus_preferences.schemas.in.h:68
 msgid "Only show folders in the tree sidebar"
@@ -1925,7 +1922,7 @@ msgstr "solosaina"
 #: ../libnautilus-private/nautilus-file-utilities.c:853
 #: ../src/network-scheme.desktop.in.h:2
 msgid "Network"
-msgstr "Rezo"
+msgstr "Tambajotra"
 
 #: ../libnautilus-private/nautilus-file-utilities.c:855
 msgid "Fonts"
@@ -1941,7 +1938,7 @@ msgstr "Mpamorona CD/DVD"
 
 #: ../libnautilus-private/nautilus-file-utilities.c:861
 msgid "Windows Network"
-msgstr "Rezo Windows"
+msgstr "Tambajotra Windows"
 
 #. translators: this is the title of the "dns-sd:///" location
 #: ../libnautilus-private/nautilus-file-utilities.c:864
@@ -2368,7 +2365,7 @@ msgstr "Fandraisana %.0s"
 
 #: ../libnautilus-private/nautilus-global-preferences.c:550
 msgid "Network Servers"
-msgstr "Mpizara rezo"
+msgstr "Mpizara tambajotra"
 
 #: ../libnautilus-private/nautilus-icon-container.c:2137
 msgid "The selection rectangle"
@@ -2727,10 +2724,8 @@ msgstr "Tianao fafàna tanteraka tokoa ve ny \"%s\"?"
 #: ../src/file-manager/fm-directory-view.c:1006
 #, fuzzy, c-format
 msgid "Are you sure you want to permanently delete the %d selected item?"
-msgid_plural ""
 "Are you sure you want to permanently delete the %d selected items?"
-msgstr[0] "Tianao fafàna tanteraka tokoa ve ireo zavatra miisa %d ireo?"
-msgstr[1] "Tianao fafàna tanteraka tokoa ve ireo zavatra miisa %d ireo?"
+msgstr "Tianao fafàna tanteraka tokoa ve ireo zavatra miisa %d ireo?"
 
 #: ../src/file-manager/fm-directory-view.c:1017
 #: ../src/file-manager/fm-tree-view.c:1149
@@ -2897,13 +2892,11 @@ msgstr "Tianao fafàna tanteraka tao anatin'ny daba tokoa ve ny \"%s\"?"
 msgid ""
 "Are you sure you want to permanently delete the %d selected item from the "
 "trash?"
-msgid_plural ""
 "Are you sure you want to permanently delete the %d selected items from the "
 "trash?"
-msgstr[0] ""
+msgstr ""
 "Tianao fafàna tanteraka tao anatin'ny daba tokoa ve ireo zavatra %d "
 "voafaritra?"
-msgstr[1] ""
 "Tianao fafàna tanteraka tao anatin'ny daba tokoa ve ireo zavatra %d "
 "voafaritra?"
 
@@ -3056,23 +3049,19 @@ msgstr "Hadika ny \"%s\" raha toa ka ekenao ny baiko Apetao"
 #: ../src/file-manager/fm-directory-view.c:6108
 #, fuzzy, c-format
 msgid "The %d selected item will be moved if you select the Paste command"
-msgid_plural ""
 "The %d selected items will be moved if you select the Paste command"
-msgstr[0] ""
+msgstr ""
 "Hifindra toerana ireo zavatra %d voafaritra raha toa ka ekenao ny baiko "
 "Apetao"
-msgstr[1] ""
 "Hifindra toerana ireo zavatra %d voafaritra raha toa ka ekenao ny baiko "
 "Apetao"
 
 #: ../src/file-manager/fm-directory-view.c:6115
 #, fuzzy, c-format
 msgid "The %d selected item will be copied if you select the Paste command"
-msgid_plural ""
 "The %d selected items will be copied if you select the Paste command"
-msgstr[0] ""
+msgstr ""
 "Hadika ireo zavatra %d voafaritra raha toa ka ekenao ny baiko Apetao"
-msgstr[1] ""
 "Hadika ireo zavatra %d voafaritra raha toa ka ekenao ny baiko Apetao"
 
 #: ../src/file-manager/fm-directory-view.c:6209
@@ -4054,7 +4043,7 @@ msgstr "Mpiaty:"
 
 #: ../src/file-manager/fm-properties-window.c:2922
 msgid "used"
-msgstr ""
+msgstr "nampiasaina"
 
 #: ../src/file-manager/fm-properties-window.c:2926
 #, fuzzy
@@ -4364,7 +4353,7 @@ msgstr "Rafi-drakitra"
 
 #: ../src/file-manager/fm-tree-view.c:1398
 msgid "Network Neighbourhood"
-msgstr "Fifanakaikezan'ny rezo"
+msgstr "Fifanakaikezan'ny tambajotra"
 
 #: ../src/file-manager/fm-tree-view.c:1640
 msgid "Tree"
@@ -4660,7 +4649,7 @@ msgstr "_Karazan'ny sampan'asa:"
 
 #: ../src/nautilus-connect-server-dialog.c:930
 msgid "Browse _Network"
-msgstr "Hizaha _rezo"
+msgstr "Hizaha _Tambajotra"
 
 #: ../src/nautilus-connect-server-dialog.c:936
 msgid "C_onnect"
@@ -5205,7 +5194,7 @@ msgstr ""
 
 #: ../src/nautilus-main.c:393
 msgid "FILENAME"
-msgstr ""
+msgstr "ANARAN-DRAKITRA"
 
 #: ../src/nautilus-main.c:431
 msgid "File Manager"
@@ -5869,7 +5858,7 @@ msgstr ""
 
 #: ../src/nautilus-window-manage-views.c:1537
 msgid "Check that an SMB server is running in the local network."
-msgstr "Jereo raha misy mpizara SMB mandeha amin'ny rezo an-toerana."
+msgstr "Jereo raha misy mpizara SMB mandeha amin'ny tambajotra an-toerana."
 
 #: ../src/nautilus-window-manage-views.c:1546
 #, c-format
@@ -6104,7 +6093,7 @@ msgstr "_Solosaina"
 #. name, stock id
 #: ../src/nautilus-window-menus.c:671
 msgid "_Network"
-msgstr "_Rezo"
+msgstr "_Tambajotra"
 
 #. label, accelerator
 #: ../src/nautilus-window-menus.c:672 ../src/network-scheme.desktop.in.h:1
