--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2007-06-27  Thierry Randrianiriana  <thierry@randrianiriana.org>
+
+	* mg.po: Updated Malagasy translation.
+
 2007-06-26  Guilherme de S. Pastore  <gpastore@gnome.org>
 
 	* ja.po: Fixed typo (Sitcky -> Sticky) in the Japanese translation,
