--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2007-06-27  Clytie Siddall <clytie@riverland.net.au>
+
+	* vi.po: Updated Vietnamese translation.
+
 2007-06-27  Thierry Randrianiriana  <thierry@randrianiriana.org>
 
 	* mg.po: Updated Malagasy translation.
