Updated Polish translation by GNOME PL Team.
2007-06-29  Artur Flinta  <aflinta@svn.gnome.org>

	* pl.po: Updated Polish translation by GNOME PL Team.


svn path=/trunk/; revision=12966

--- a/po/pl.po
+++ b/po/pl.po
@@ -10,8 +10,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: nautilus\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2007-06-29 14:43+0200\n"
-"PO-Revision-Date: 2007-06-29 13:52+0100\n"
+"POT-Creation-Date: 2007-06-29 23:05+0200\n"
+"PO-Revision-Date: 2007-06-29 22:09+0100\n"
 "Last-Translator: Tomasz Dominikowski <dominikowski@gmail.com>\n"
 "Language-Team: Polish <translation-team-pl@lists.sourceforge.net>\n"
 "MIME-Version: 1.0\n"
@@ -4456,11 +4456,11 @@ msgstr ""
 
 #: ../src/nautilus-bookmarks-window.c:192
 msgid "No bookmarks defined"
-msgstr "Nie zdefiniowano żadnych Ulubionych"
+msgstr "Nie zdefiniowano żadnych zakładek"
 
 #: ../src/nautilus-bookmarks-window.glade.h:1
 msgid "<b>_Bookmarks</b>"
-msgstr "<b>Ulu_bione</b>"
+msgstr "<b>_Zakładki</b>"
 
 #: ../src/nautilus-bookmarks-window.glade.h:2
 msgid "<b>_Location</b>"
@@ -4472,7 +4472,7 @@ msgstr "<b>_Nazwa</b>"
 
 #: ../src/nautilus-bookmarks-window.glade.h:4
 msgid "Edit Bookmarks"
-msgstr "Modyfikacja Ulubionych"
+msgstr "Modyfikuj zakładki"
 
 #: ../src/nautilus-connect-server-dialog-main.c:67
 #, c-format
@@ -5202,7 +5202,7 @@ msgstr "Przej_dź"
 #. name, stock id, label
 #: ../src/nautilus-navigation-window-menus.c:427
 msgid "_Bookmarks"
-msgstr "Ulu_bione"
+msgstr "_Zakładki"
 
 #. name, stock id, label
 #: ../src/nautilus-navigation-window-menus.c:428
@@ -5245,24 +5245,24 @@ msgstr "Czyści zawartość menu Przejdź oraz listy Wstecz/Naprzód"
 #: ../src/nautilus-navigation-window-menus.c:440
 #: ../src/nautilus-spatial-window.c:860
 msgid "_Add Bookmark"
-msgstr "_Dodaj do Ulubionych"
+msgstr "_Dodaj do zakładek"
 
 #. name, stock id, label
 #: ../src/nautilus-navigation-window-menus.c:441
 #: ../src/nautilus-spatial-window.c:861
 msgid "Add a bookmark for the current location to this menu"
-msgstr "Dodaje bieżące położenie do Ulubionych w tym menu"
+msgstr "Dodaje bieżące położenie do zakładek w tym menu"
 
 #: ../src/nautilus-navigation-window-menus.c:443
 #: ../src/nautilus-spatial-window.c:863
 msgid "_Edit Bookmarks"
-msgstr "Z_modyfikuj Ulubione"
+msgstr "Z_modyfikuj zakładki"
 
 #. name, stock id, label
 #: ../src/nautilus-navigation-window-menus.c:444
 #: ../src/nautilus-spatial-window.c:864
 msgid "Display a window that allows editing the bookmarks in this menu"
-msgstr "Wyświetla okno, które pozwala na modyfikację Ulubionych w tym menu"
+msgstr "Wyświetla okno, które pozwala na modyfikację zakładek w tym menu"
 
 #: ../src/nautilus-navigation-window-menus.c:446
 #: ../src/nautilus-spatial-window.c:866
@@ -5719,12 +5719,12 @@ msgid ""
 "Do you want to remove any bookmarks with the non-existing location from your "
 "list?"
 msgstr ""
-"Czy chcesz usunąć ze swojej listy pozycje Ulubionych zawierające nie "
-"istniejące położenie?"
+"Czy chcesz usunąć ze swojej listy pozycje zakładek zawierające nieistniejące "
+"położenie?"
 
 #: ../src/nautilus-window-bookmarks.c:99
 msgid "Bookmark for Nonexistent Location"
-msgstr "Pozycja Ulubionych dla nieistniejącego położenia"
+msgstr "Pozycja zakładek dla nieistniejącego położenia"
 
 #: ../src/nautilus-window-manage-views.c:655
 msgid "You can choose another view or go to a different location."
@@ -5784,7 +5784,7 @@ msgstr "Wybierz inną przeglądarkę i spróbuj ponownie."
 
 #: ../src/nautilus-window-menus.c:183
 msgid "Go to the location specified by this bookmark"
-msgstr "Przechodzi do położenia opisywanego przez tę pozycję Ulubionych"
+msgstr "Przechodzi do położenia opisywanego przez tę pozycję zakładek"
 
 #: ../src/nautilus-window-menus.c:424
 msgid ""
@@ -6000,7 +6000,7 @@ msgstr "_Sieć"
 #. label, accelerator
 #: ../src/nautilus-window-menus.c:672 ../src/network-scheme.desktop.in.h:1
 msgid "Browse bookmarked and local network locations"
-msgstr "Przeglądanie ulubionych i położeń w sieci lokalnej"
+msgstr "Przeglądanie zakładek i położeń w sieci lokalnej"
 
 #. name, stock id
 #: ../src/nautilus-window-menus.c:675
