--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -2,6 +2,10 @@
 
 	* pl.po: Updated Polish translation by GNOME PL Team.
 
+2007-06-29  Artur Flinta  <aflinta@svn.gnome.org>
+
+	* pl.po: Updated Polish translation by GNOME PL Team.
+
 2007-06-29  Changwoo Ryu  <cwryu@debian.org>
 
 	* ko.po: Updated Korean translation.
