--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,11 @@
+2007-07-02  Nikos Charonitakis  <nikosx@gmail.com>
+
+	* el.po: Updated el.po to match pot file.
+
+2007-07-02  Nikos Charonitakis  <nikosx@gmail.com>
+
+	* el.po: Updated Greek translation.
+
 2007-07-02  Runa Bhattacharjee <runabh@gmail.com>
 
 	* bn_IN.po: Updated Bengali India Translation.
