Remove undead file.
2007-07-02  Martin Wehner  <martin.wehner@gmail.com>

	* components/services/nautilus-dependent-shared/
	shared-service-widgets.c:
	Remove undead file.

svn path=/branches/gnome-2-18/; revision=12972

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2007-07-02  Martin Wehner  <martin.wehner@gmail.com>
+
+	* components/services/nautilus-dependent-shared/
+	shared-service-widgets.c:
+	Remove undead file.
+
 2007-06-12  Martin Wehner  <martin.wehner@gmail.com>
 
 	* src/nautilus-zoom-control.c: (create_zoom_menu_item):
