Fix build with libIDL-0.8.5 and older. (#341173) Patch from Marinus
2007-07-02  Martin Wehner  <martin.wehner@gmail.com>

	* src/nautilus-shell-interface.idl:
	Fix build with libIDL-0.8.5 and older. (#341173)
	Patch from Marinus Schraal  <foser@gentoo.org>

svn path=/branches/gnome-2-18/; revision=12974

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2007-07-02  Martin Wehner  <martin.wehner@gmail.com>
 
+	* configure.in:
+	Make libexif dependency optional again. (#165773)
+
+2007-07-02  Martin Wehner  <martin.wehner@gmail.com>
+
 	* src/nautilus-shell-interface.idl:
 	Fix build with libIDL-0.8.5 and older. (#341173)
 	Patch from Marinus Schraal  <foser@gentoo.org>
