--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,13 @@
+=== nautilus 2.18.3 ===
+
+2007-07-02  Martin Wehner  <martin.wehner@gmail.com>
+
+	* NEWS:
+	Update for release
+
+	* configure.in:
+	Bump version to 2.18.3
+
 2007-07-02  Martin Wehner  <martin.wehner@gmail.com>
 
 	* libnautilus-private/nautilus-search-engine-simple.c:
