--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,10 @@
+Major changes in 2.18.3 are:
+* Fix leaks
+* Fix keyboard shortcuts in preferences dialog
+* Build fixes
+* Added alpha support for icon frames
+* Better handling of unicode search terms
+
 Major changes in 2.18.1 are:
 * Some crash fixes
 * Bump default name column width to 32 chars
