--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2007-07-02  Nguyễn Thái Ngọc Duy <pclouds@gmail.com>
+
+	* vi.po: Updated Vietnamese translation.
+
 2007-07-02  Nikos Charonitakis  <nikosx@gmail.com>
 
 	* el.po: Updated el.po to match pot file.
