--- a/po/vi.po
+++ b/po/vi.po
@@ -2,7 +2,7 @@
 # Copyright © 2007 Gnome i18n Project for Vietnamese.
 # Hoang Ngoc Tu <hntu@gmx.de>, 2001-2002.
 # Joern v. Kattchee <kattchee@gmx.net>, 2001-2002.
-# Nguyen Thai Ngoc Duy <pclouds@vnlinux.org>, 2002, 2004, 2007.
+# Nguyễn Thái Ngọc Duy <pclouds@gmail.com>, 2002, 2004, 2007.
 # Trinh Minh Thanh <tmthanh@yahoo.com>, 2002-2003, 2005.
 # Clytie Siddall <clytie@riverland.net.au>, 2005-2007.
 # 
@@ -2950,17 +2950,17 @@ msgstr "Chọn một chương trình để mở mục đã chọn"
 #: ../src/file-manager/fm-directory-view.c:6895
 #. name, stock id
 msgid "_Properties"
-msgstr "Tài _sản"
+msgstr "_Thuộc tính"
 
 #: ../src/file-manager/fm-directory-view.c:6888
 #. label, accelerator
 msgid "View or modify the properties of each selected item"
-msgstr "Xem hoặc sửa đổi các tài sản của mỗi mục được chọn"
+msgstr "Xem hoặc sửa đổi các thuộc tính của mỗi mục được chọn"
 
 #: ../src/file-manager/fm-directory-view.c:6896
 #. label, accelerator
 msgid "View or modify the properties of the open folder"
-msgstr "Xem hoặc sửa đổi các tài sản của thư mục đang mở"
+msgstr "Xem hoặc sửa đổi các thuộc tính của thư mục đang mở"
 
 #: ../src/file-manager/fm-directory-view.c:6899
 #. name, stock id
@@ -3856,7 +3856,7 @@ msgstr "đã dùng"
 
 #: ../src/file-manager/fm-properties-window.c:2926
 msgid "free"
-msgstr "cây"
+msgstr "trống"
 
 #: ../src/file-manager/fm-properties-window.c:2928
 msgid "Total capacity: "
@@ -5663,7 +5663,7 @@ msgstr "Nhóm Việt hoá GNOME (http://gnomevi.sourceforge.net)"
 
 #: ../src/nautilus-window-menus.c:465
 msgid "Nautilus Web Site"
-msgstr "Nơi Mạng Nautilus"
+msgstr "Trang Web Nautilus"
 
 #: ../src/nautilus-window-menus.c:593
 msgid "_File"
