--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2007-07-03  Jovan Naumovski  <jovan@lugola.net>
+ 
+ 	 * mk.po: Updated Macedonian translation.
+
 2007-07-02  Nguyễn Thái Ngọc Duy <pclouds@gmail.com>
 
 	* vi.po: Updated Vietnamese translation.
