--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2007-07-04  Runa Bhattacharjee <runabh@gmail.com>
+
+	* bn_IN.po: Updated Bengali India Translation.
+
 2007-07-03  Jovan Naumovski  <jovan@lugola.net>
  
  	 * mk.po: Updated Macedonian translation.
