--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2007-07-10  Martin Wehner  <martin.wehner@gmail.com>
+
+	* libnautilus-private/Makefile.am:
+	* libnautilus-private/nautilus-cdrom-extensions.h:
+	Remove unused file.
+
 2007-06-27  Alexander Larsson  <alexl@redhat.com>
 
         * src/nautilus-file-management-properties-main.c:
