--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 2007-07-10  Martin Wehner  <martin.wehner@gmail.com>
 
+	* src/nautilus-image-properties-page.c: (file_read_callback):
+	Don't ignore EXIF metadata of JPEG with XMP. (#451344)
+	Patch from Hubert Figuiere  <hfiguiere@teaser.fr>
+
+2007-07-10  Martin Wehner  <martin.wehner@gmail.com>
+
 	* src/nautilus-sidebar-title.c: (sidebar_title_create_title_label),
 	(sidebar_title_create_more_info_label):
 	Fix alignment of labels in information sidebar. (#414199)
