--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,11 @@
+Major changes in 2.19.5 are:
+* Build fixes
+* Fix leaks
+* Fix crash
+* Improved JPEG metadata handling
+* Fix information sidebar layout
+* Translation updates
+
 Major changes in 2.19.4 are:
 * Allow activating the zoom context menu by keyboard
 * Allow renaming of the network servers icons
