--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+=== nautilus 2.19.5 ===
+
+2007-07-10  Martin Wehner  <martin.wehner@gmail.com>
+
+	* NEWS:
+	Update for release
+
 2007-07-10  Martin Wehner  <martin.wehner@gmail.com>
 
 	* libnautilus-private/nautilus-program-choosing.c:
