--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2007-07-10  Martin Wehner  <martin.wehner@gmail.com>
+
+	* configure.in:
+	Post release version bump
+
 === nautilus 2.19.5 ===
 
 2007-07-10  Martin Wehner  <martin.wehner@gmail.com>
