--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2007-07-12  Changwoo Ryu  <cwryu@debian.org>
+
+	* ko.po: Updated Korean translation by Eunju Kim.
+
 2007-07-08  Takeshi AIHANA <takeshi.aihana@gmail.com>
 
 	* ja.po: Updated Japanese translation.
