--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,5 +1,9 @@
 2007-07-18 Gabor Kelemen  <kelemeng@gnome.hu>
 
+	* hu.po: Translation updated - this time really :).
+
+2007-07-18 Gabor Kelemen  <kelemeng@gnome.hu>
+
 	* hu.po: Translation updated.
 
 2007-07-17  Žygimantas Beručka  <zygis@gnome.org>
