Remove trailing whitespace from TryExec line. (#426949) Patch from Dan
2007-07-21  Martin Wehner  <martin.wehner@gmail.com>

	* nautilus-computer.desktop.in.in:
	* nautilus-folder-handler.desktop.in.in:
	* nautilus-home.desktop.in.in:
	Remove trailing whitespace from TryExec line. (#426949)
	Patch from Dan Winship  <danw@novell.com>

svn path=/trunk/; revision=13006

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2007-07-21  Martin Wehner  <martin.wehner@gmail.com>
+
+	* nautilus-computer.desktop.in.in:
+	* nautilus-folder-handler.desktop.in.in:
+	* nautilus-home.desktop.in.in:
+	Remove trailing whitespace from TryExec line. (#426949)
+	Patch from Dan Winship  <danw@novell.com>
+
 2007-07-18  Martin Wehner  <martin.wehner@gmail.com>
 
 	* src/nautilus-navigation-window.c:
