Add uninstalled pkg-config file. (#400114) Patch from Brian Cameron
2007-07-21  Martin Wehner  <martin.wehner@gmail.com>

	* configure.in:
	* libnautilus-extension/libnautilus-extension-uninstalled.pc.in:
	Add uninstalled pkg-config file. (#400114)
	Patch from Brian Cameron  <brian.cameron@sun.com>

svn path=/trunk/; revision=13007

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,12 @@
 2007-07-21  Martin Wehner  <martin.wehner@gmail.com>
 
+	* configure.in:
+	* libnautilus-extension/libnautilus-extension-uninstalled.pc.in:
+	Add uninstalled pkg-config file. (#400114)
+	Patch from Brian Cameron  <brian.cameron@sun.com>
+
+2007-07-21  Martin Wehner  <martin.wehner@gmail.com>
+
 	* nautilus-computer.desktop.in.in:
 	* nautilus-folder-handler.desktop.in.in:
 	* nautilus-home.desktop.in.in:
