Don't error out when recursing into directories during search. (#433105)
2007-07-23  Alexander Larsson  <alexl@redhat.com>

        * libnautilus-private/nautilus-search-engine-simple.c:
	Don't error out when recursing into directories during search. (#433105)
	Requires recent gnome-vfs
	Patch from Marlon Nelson


svn path=/trunk/; revision=13010

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2007-07-23  Alexander Larsson  <alexl@redhat.com>
+
+        * libnautilus-private/nautilus-search-engine-simple.c:
+	Don't error out when recursing into directories during search. (#433105)
+	Requires recent gnome-vfs
+	Patch from Marlon Nelson
+
 2007-07-21  Martin Wehner  <martin.wehner@gmail.com>
 
 	* configure.in:
