added two missing tooltip strings (#329308)
2007-07-23  Andre Klapper  <a9016009@gmx.de>

	* src/nautilus-window-menus.c:
	added two missing tooltip strings (#329308)


svn path=/trunk/; revision=13012

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2007-07-23  Andre Klapper  <a9016009@gmx.de>
+
+	* src/nautilus-window-menus.c:
+	added two missing tooltip strings (#329308)
+
 2007-07-23  Christian Persch  <chpe@gnome.org>
 
 	* configure.in:
