--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2007-07-23  Andre Klapper  <a9016009@gmx.de>
 
+	* src/file-manager/fm-directory-view.c:
+	improved string and added ngettext support (#326952)
+
+2007-07-23  Andre Klapper  <a9016009@gmx.de>
+
 	* libnautilus-private/apps_nautilus_preferences.schemas.in:
 	corrected description for confirm_trash (#329440)
 
