corrected executable text file labels (#334309)
2007-07-23  Andre Klapper  <a9016009@gmx.de>

	* src/nautilus-file-management-properties.glade:
	corrected executable text file labels (#334309)


svn path=/trunk/; revision=13016

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2007-07-23  Andre Klapper  <a9016009@gmx.de>
 
+	* src/nautilus-file-management-properties.glade:
+	corrected executable text file labels (#334309)
+
+2007-07-23  Andre Klapper  <a9016009@gmx.de>
+
 	* src/file-manager/fm-directory-view.c:
 	improved string and added ngettext support (#326952)
 
