fixed a typo in key description
2007-07-24  Luca Ferretti  <elle.uca@libero.it>

	* libnautilus-private/apps_nautilus_preferences.schemas.in:
	fixed a typo in key description


svn path=/trunk/; revision=13017

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2007-07-24  Luca Ferretti  <elle.uca@libero.it>
+
+	* libnautilus-private/apps_nautilus_preferences.schemas.in:
+	fixed a typo in key description
+
 2007-07-23  Andre Klapper  <a9016009@gmx.de>
 
 	* src/nautilus-file-management-properties.glade:
