--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2007-08-24  Christian Kirbach  <Christian.Kirbach@googlemail.com>
+
+        * configure.in:	
+        Add missing dependency on libSM.
+
 2007-07-24  Luca Ferretti  <elle.uca@libero.it>
 
 	* libnautilus-private/apps_nautilus_preferences.schemas.in:
