--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2007-07-24  Alexander Larsson  <alexl@redhat.com>
+
+        * src/nautilus-connect-server-dialog.c:
+        (nautilus_connect_server_dialog_init):
+	React on enter key (#449591)
+	Patch from Christian Neumair
+
 2007-08-24  Christian Kirbach  <Christian.Kirbach@googlemail.com>
 
         * configure.in:	
