Optionally support XMP metadata in images via exemi (#451380) Patch from
2007-07-24  Alexander Larsson  <alexl@redhat.com>

        * configure.in:
        * src/Makefile.am:
        * src/nautilus-image-properties-page.c:
        * src/nautilus-main.c:
	Optionally support XMP metadata in images via exemi (#451380)
	Patch from Hubert Figuiere


svn path=/trunk/; revision=13021

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,14 @@
 2007-07-24  Alexander Larsson  <alexl@redhat.com>
 
+        * configure.in:
+        * src/Makefile.am:
+        * src/nautilus-image-properties-page.c:
+        * src/nautilus-main.c:
+	Optionally support XMP metadata in images via exemi (#451380)
+	Patch from Hubert Figuiere
+
+2007-07-24  Alexander Larsson  <alexl@redhat.com>
+
         * src/nautilus-connect-server-dialog.c:
         (nautilus_connect_server_dialog_init):
 	React on enter key (#449591)
