--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2007-07-24  Priit Laes  <plaes@svn.gnome.org>
+
+	* et.po: Estonian translation update by Ivar Smolin.
+
 2007-07-24  Luca Ferretti  <elle.uca@libero.it>
 
 	* it.po: Updated Italian translation.
