Require cvs gnome-vfs
2007-07-24  Alexander Larsson  <alexl@redhat.com>

	* configure.in:
	Require cvs gnome-vfs


svn path=/trunk/; revision=13023

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2007-07-24  Alexander Larsson  <alexl@redhat.com>
 
+	* configure.in:
+	Require cvs gnome-vfs
+
+2007-07-24  Alexander Larsson  <alexl@redhat.com>
+
         * configure.in:
         * src/Makefile.am:
         * src/nautilus-image-properties-page.c:
